# axon-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/correlation/: mod.rs  multi.rs  origin.rs  simple.rs
src/ddd/: constant.rs  entity.rs  metadata.rs  mod.rs
src/message/: base.rs  generic.rs  mod.rs  payload.rs
